# CrypticRust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-clippy.yml
src/: main.rs
src/general/: errors.rs  numbers.rs
src/number_theory/: README.md
