[package]
name = "crypticRust"
version = "0.1.1"
authors = ["Cassandra Pearson <cnegrich@gmail.com>"]
edition = "2021"

[[bin]]
name = "crypticRust"
path = "src/main.rs"

[lib]
name = "cryptic_rust"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.94"
thiserror = "2.0.4"
rstest = "0.23.0"
rand = "0.8.3"
num = "0.4.3"
cgmath = "0.18.0"
git-version = "0.3.9"
num-traits = "0.2.19"
